# COL781

./: .gitignore  README.md
Assignment1/: CMakeLists.txt  create.sh  input.json  main.cpp  multiple_lights.cpp  sphere.ppm.final
Assignment1/cmake/modules/: FindASSIMP.cmake  FindGLFW3.cmake  FindGLM.cmake
Assignment1/include/: Camera.h  DS.h  Engine.h  Image.h  Models.h  OGLModels.h  defs.h  utils.h
Assignment1/include_lib/learnopengl/: camera.h  mesh.h  model.h  shader.h
Assignment1/report/: report.tex
Assignment1/resources/shaders/: light.fs  model.fs
Assignment1/src/: Box.cpp  Camera.cpp  Collection.cpp  Engine.cpp  Image.cpp  Models.cpp  OGLModels.cpp  Plane.cpp  Polygon.cpp  Quadric.cpp  Sphere.cpp  Triangle.cpp  inward.txt  main.cpp  model_loading.cpp  outward.txt  sexy_sphere.ppm  sphere.ppm  utils.cpp
Assignment2/: CMakeLists.txt
Assignment2/include/: ball.h  beizer.h  engine.h  gutter.h  pin.h  track.h
Assignment2/include_lib/learnopengl/: camera.h  mesh.h  model.h
Assignment2/includes/learnopengl/: camera.h  mesh.h  model.h
Assignment2/models/: ball.mtl  earth.mtl  pin.mtl  track.blend  track.blend1  track.mtl
Assignment2/models/blends/: scene.blend
Assignment2/resources/: model.fs
Assignment2/resources/bowler/: bowler.dae
Assignment2/resources/shaders/: animated.fs  animated.vs  model.fs
Assignment2/src/: AnimatedMesh.h  AnimatedModel.h  main.cpp
Assignment3/: CMakeLists.txt  submit.sh
Assignment3/include/: dust.h  explosion.h  fbo.h  light.h  particle.h  quad.h  ring.h  skybox.h  stb_image.hpp  terrain.h  wall.h  water.h  watergun.h
Assignment3/include_lib/learnopengl/: camera.h  model.h
Assignment3/models/: moon.mtl
Assignment3/models/my_moon/: moon.mtl
Assignment3/report/: report.tex
Assignment3/resources/shaders/: fbo.fs  model.fs  model.vs  particle.fs  particle.vs  terrain.fs  terrain.vs
Assignment3/src/: dust.cpp  explosion.cpp  fbo.cpp  main.cpp  particle.cpp  ring.cpp  skybox.cpp  terrain.cpp  wall.cpp  watergun.cpp
Assignment3/src/common/: fbo.cpp  particle.cpp  quad.cpp
Assignment3/src/genesis/: explosion.cpp  genesis.cpp  light.cpp  terrain.cpp  wall.cpp  water.cpp
Assignment3/src/holi/: dust.cpp  holi.cpp  watergun.cpp
Assignment3/src/main/: fire.cpp  holi.cpp  planet.cpp
